Fix alignment in website

--- a/fluxowebapp/src/index.css
+++ b/fluxowebapp/src/index.css
@@ -1,6 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::selection{
+  color: #000000;
+  background-color: #57FF5A;
+}
  
 @layer base {
   :root {
